# codex-claude-codex-claude-workbench

./: .gitignore  AGENTS.md  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  新建 文本文档.txt
.trellis/: .template-hashes.json
.trellis/tasks/00-bootstrap-guidelines/: task.json
.trellis/tasks/06-21-provider-rollback-credential-management/: check.jsonl  design.md  implement.jsonl  implement.md  prd.md  task.json
.trellis/tasks/06-21-provider-switch-credential-closure/: implement.jsonl  task.json
.trellis/tasks/archive/2026-06/06-21-provider-switch-credential-closure/: check.jsonl  design.md  implement.md  prd.md  task.json
.trellis/workspace/ww/: index.md  journal-1.md
docs/: project-context-for-codex.md
src/: index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/: 001_init.sql
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: mod.rs  providers.rs  sessions.rs  status.rs
src-tauri/src/services/: app_paths.rs  backup_service.rs  config_discovery.rs  credential_service.rs  db.rs  live_config.rs  mod.rs
src/app/: app.tsx  dashboard.tsx
src/components/ui/: badge.tsx  button.tsx  card.tsx  input.tsx
src/lib/: query.ts  tauri.ts
