[package]
name = "codex-claude-workbench"
version = "0.1.0"
description = "Codex / Claude daily workbench"
authors = ["Codex Claude Workbench"]
edition = "2021"

[lib]
name = "codex_claude_workbench_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.32", features = ["bundled"] }
windows-sys = { version = "0.60", features = ["Win32_Foundation", "Win32_Security_Cryptography"] }
